// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Text Component correctly 1`] = `
<span
  className="sc-bdVaJa iLwsQj"
  color={undefined}
  scale={undefined}
>
  Das ist ein Text
</span>
`;

exports[`renders the Text Component correctly 2`] = `
<span
  className="sc-bdVaJa hRHokw"
  color="error"
  scale="xl"
>
  Das ist ein Text
</span>
`;
